# learningPixman

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  bmp.cpp  bmp.h  main.cpp
CMake/: FindLocalPixman.cmake
libsrc/pixman/: .gitignore  CMakeLists.txt
libsrc/pixman/pixman/: CMakeLists.txt
libsrc/stb/: stb_image_write.h
